@@ -57,6 +57,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.text.ParseException;
@@ -196,8 +197,8 @@ public class CheckResources {
             try {
                 String resPath = "/src" + getResourcePath(clazz, null);
                 URLConnection uc;
-                URL latestUrl = new URL(rootUrl + (revision2 == null ? "master" : revision2) + resPath);
-                URL prevUrl = new URL(rootUrl + revision + resPath);
+                URL latestUrl = URI.create(rootUrl + (revision2 == null ? "master" : revision2) + resPath).toURL();
+                URL prevUrl = URI.create(rootUrl + revision + resPath).toURL();
 
                 Properties latestProp = new LinkedProperties();
                 try {
